Sun Apr 20 12:57:15 2014  Masaya Tarui  <tarui@ruby-lang.org>

	* st.c (st_foreach_check): change start point of search at check
	  from top to current. [ruby-dev:48047] [Bug #9646]

Sun Apr 20 08:41:33 2014  Andrew DeMaria  <ademariad@gmail.com>

	* lib/mkmf.rb (link_command, libpathflag, create_makefile): prefer
	  user specified `$LIBPATH` than `$DEFLIBPATH`.  [ruby-core:62100]
	  [ruby-trunk - Bug #9760]

Sun Apr 20 06:01:18 2014  Eric Wong  <e@80x24.org>

	* gc.c (rb_gc_writebarrier): drop special case for big hash/array
	  [Bug #9518]

Sat Apr 19 15:38:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): flush cmdarg flags inside left-paren in a
	  command argument, to allow parenthesed do-block as an argument
	  without arguments parentheses.  [ruby-core:61950] [Bug #9726]

Sat Apr 19 10:07:24 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h (struct RBignum): Use size_t for len.

	* include/ruby/intern.h (rb_big_new): Use size_t instead of long to
	  specify the size of bignum.
	  (rb_big_resize): Ditto.

	* bignum.c: Follow above changes.

	* rational.c: Follow above changes.

	* marshal.c: Follow above changes.

Sat Apr 19 00:32:07 2014  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_num2long): Returns a long.
	  (rb_num2ulong): Returns a unsigned long.

	* bignum.c (rb_big2long): Returns a long.
	  (rb_big2ulong): Returns a unsigned long.

	* include/ruby/intern.h: Follow above changes.

	* include/ruby/ruby.h: Follow above changes.
	  (rb_num2long_inline): No need to cast.
	  (rb_num2ulong_inline): Ditto.

Sat Apr 19 00:17:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (SHARABLE_SUBSTRING_P): predicate if substring can be
	  shared with the original string.  true if just at the end of the
	  original string, for the time being.  all substring will be able to
	  be shared in the future.

Fri Apr 18 21:48:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_new_frozen): consider the shared string at