@@ -1,3 +1,8 @@
+Mon Apr 21 14:11:48 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/stringio/stringio.c (strio_putc): fix for non-ascii
+	  encoding, like as IO#putc.  [ruby-dev:48114] [Bug #9765]
+
 Sun Apr 20 12:57:15 2014  Masaya Tarui  <tarui@ruby-lang.org>
 
 	* st.c (st_foreach_check): change start point of search at check
